# lc

./: .gitignore  ARCHITECTURE_REVIEW.md  CHANGELOG.md  COST_OPTIMIZATION.md  Cargo.toml  Cross.toml  EXA_INTEGRATION_SUMMARY.md  FEATURE_PARITY_MAPPING.md  LICENSE  METADATA_CHANGES.md  Makefile  PACKAGE_DISTRIBUTION_PLAN.md  PDF_READER_IMPLEMENTATION.md  README.md  REORGANIZATION_PLAN.md  SMOKE_TEST_REPORT.md  TESTING.md  TEST_PROVIDERS.md  TODO.md  build.sh  deploy.sh  dump_models.rs  examples.md  install.sh  lc.1  lc_file_reading_architecture_audit.md  patch.diff  patch.py  pdf_libraries_research.md  reproduce_issue  setup_completion_test.sh  test_bedrock_templates.toml  test_canonicalize  test_canonicalize.rs  test_dir_builder.rs  test_exa_integration.sh  test_exa_search.sh  test_input.rs  test_metadata.sh  test_multi_provider.sh  (+36 more)
.Jules/: bolt.md  palette.md  sentinel.md
.github/workflows/: deploy-docs.yml  release.yml  test-billing.yml  test-dev.yml  test-dev.yml_bak  test-linux.yml  test-release.yml  test-windows.yml  test-windows.yml_bak
.jules/: bolt.md  palette.md  sentinel.md
benches/: database_benchmark.rs  http_client_benchmark.rs
config_samples/: README.md  config_sample.toml  mcp_sample.toml  model_paths_sample.toml  search_config_sample.toml  search_config_tavily_sample.toml  sync_sample.toml  tags_sample.toml  templates_sample.toml  webchatproxy_daemons_sample.toml  webchatproxy_sample.toml
config_samples/providers/: .toml_sample.toml  ai21_sample.toml  alibaba_sample.toml  amazon_bedrock_sample.toml  bedrock_sample.toml  cerebras_sample.toml  chub_sample.toml  chutes_sample.toml  claude_sample.toml  cloudflare_sample.toml  cohere_sample.toml  deepinfra_sample.toml  deepseek_sample.toml  digitalocean_sample.toml  fireworks_sample.toml  gemini_sample.toml  github-copilot_sample.toml  github_sample.toml  grok_sample.toml  groq_sample.toml  huggingface_sample.toml  hyperbolic_sample.toml  inceptionlabs_sample.toml  kagi_sample.toml  kilo_sample.toml  lambda_sample.toml  litellm_sample.toml  meta_sample.toml  mistral_sample.toml  moonshot_sample.toml  nebius_sample.toml  novita_sample.toml  nscale_sample.toml  nvidia_sample.toml  ollama_sample.toml  openai_sample.toml  openrouter_sample.toml  perplexity_sample.toml  poe_sample.toml  requesty_sample.toml  (+10 more)
docs/: AUTHENTICATION_HEADERS.md  CRATES_IO_PUBLICATION.md  DATABASE_OPTIMIZATION_GUIDE.md  DEPLOYMENT.md  HTTP_CLIENT_OPTIMIZATION.md  INSTALLATION_ROADMAP.md  MODELS_DUMP.md  PDF_TESTING_SUMMARY.md  PERFORMANCE_OPTIMIZATIONS.md  PROXY_README.md  RELEASE_WORKFLOW_EXPLAINED.md  SEARCH_FEATURE.md  SHELL_COMPLETION_SUMMARY.md  SYNC_FEATURE.md  TEMPLATE_SYSTEM.md  WEBCHATPROXY_README.md  metadata_design.md  metadata_example.md  shell-completion.md
docs-site/: .gitignore  .markdownlint.json  DEPLOY_TO_VERCEL.md  LOGO_SETUP.md  README.md  cspell.json  docusaurus.config.js  package-lock.json  package.json  sidebars.js  vercel.json
docs-site/docs/: faq.md  intro.md  troubleshooting.md
docs-site/docs/advanced/: embeddings.md  mcp.md  provider-management.md  rag.md  sync.md  vector-database.md  vision.md
docs-site/docs/commands/: alias.md  audio.md  chat.md  completions.md  config.md  embed.md  keys.md  logs.md  mcp.md  models.md  overview.md  providers.md  proxy.md  search.md  similar.md  sync.md  templates.md  usage.md  vectors.md  web-chat-proxy.md
models/: ai21.json  cerebras.json  chutes.json  claude.json  cohere.json  deepinfra.json  digitalocean.json  fireworks.json  github-copilot.json  github.json  grok.json  groq.json  hyperbolic.json  kilo.json  litellm.json  meta.json  mistral.json  nebius.json  novita.json  nscale.json  nvidia.json  ollama.json  openai.json  openrouter.json  requesty.json  sambanova.json  together.json  venice.json  vercel.json
provider-registry/: README.md  registry.json
provider-registry/providers/: openai.toml
scripts/: bump-version.sh  cli_spec.json  generate_config_samples.py  generate_pdf_fixtures.py  release-checklist.sh  test_providers.sh
src/: audio_utils.rs  chat.rs  cli.rs  completion.rs  config.rs  database.rs  dump_metadata.rs  error.rs  errors.rs  http_client.rs  image_utils.rs  keys.rs  lib.rs  main.rs  mcp.rs  mcp_daemon.rs  model_metadata.rs  models_cache.rs  provider.rs  provider_installer.rs  proxy.rs  sync.rs  template_processor.rs  token_utils.rs  unified_cache.rs  usage_stats.rs  vector_db.rs  webchatproxy.rs
src/analytics/: mod.rs  usage_stats.rs
src/cli/: aliases.rs  audio.rs  chat.rs  completion.rs  config.rs  definitions.rs  embed.rs  image.rs  keys.rs  logging.rs  logs.rs  mcp.rs  mod.rs  models.rs  prompts.rs  providers.rs  proxy.rs  search.rs  sync.rs  templates.rs  tests.rs  usage.rs  utils.rs  vectors.rs  webchatproxy.rs
src/core/: chat.rs  completion.rs  http_client.rs  mod.rs  provider.rs  provider_installer.rs  tools.rs
src/data/: config.rs  database.rs  keys.rs  mod.rs  vector_db.rs  vector_db.rs.orig
src/models/: cache.rs  dump_metadata.rs  metadata.rs  mod.rs  unified_cache.rs
src/readers/: mod.rs  pdf.rs
src/search/: brave.rs  config.rs  duckduckgo.rs  exa.rs  jina.rs  mod.rs  providers.rs  search_result.rs  serpapi.rs  serper.rs  tavily.rs
src/services/: mcp.rs  mcp_daemon.rs  mod.rs  proxy.rs  webchatproxy.rs
src/sync/: config.rs  encryption.rs  mod.rs  providers.rs  s3.rs  sync.rs
src/utils/: audio.rs  cli_utils.rs  image.rs  input.rs  mod.rs  regex_cache.rs  regex_utils.rs  template_processor.rs  test.rs  token.rs
tests/: alias_commands.rs  bedrock_template_tests.rs  chat_commands.rs  config_commands.rs  embed_commands.rs  key_commands.rs  keys_add.rs  mcp_commands.rs  model_commands.rs  models_capability_tests.rs  pdf_reader_tests.rs  prompt_commands.rs  provider_commands.rs  proxy_commands.rs  rag_commands.rs  search_commands.rs  similar_commands.rs  stream.rs  sync_commands.rs  template_commands.rs  template_patterns.rs  template_tests.rs  test_config_isolation.rs  vector_commands.rs  verify_mcp_socket_permissions.rs  verify_permissions.rs
tests/common/: mod.rs
tests/pdf_fixtures/: README.md
(+13 files in other folders)
