[package]
name = "lc"
version = "0.1.0"
edition = "2021"
description = "LLM Client - A fast Rust-based LLM CLI tool with provider management and chat sessions"
authors = ["Rajashekar Chintalapati <rajshekar.ch@gmail.com>"]
license = "MIT"

[[bin]]
name = "lc"
path = "src/main.rs"

[lib]
name = "lc"
path = "src/lib.rs"

[dependencies]
clap = { version = "4.4", features = ["derive", "env"] }
tokio = { version = "1.35", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "stream"] }
futures-util = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
dirs = "5.0"
uuid = { version = "1.6", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
rusqlite = { version = "0.30", features = ["bundled", "chrono"] }
rpassword = "7.3"
toml = "0.8"
colored = "2.1"
tabled = "0.15"
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }
rand = "0.8"
atty = "0.2"
tiktoken-rs = "0.5"
glob = "0.3"
lazy_static = "1.4"
rmcp = { git = "https://github.com/modelcontextprotocol/rust-sdk.git", features = ["client", "transport-child-process", "transport-sse-client", "reqwest"] }
scraper = "0.18"
urlencoding = "2.1"
# Performance optimization dependencies
lru = "0.12"
rayon = "1.8"
memmap2 = "0.9"
simdeez = "2.0.0-dev5"
hnsw_rs = "0.3"
dashmap = "5.5"
parking_lot = "0.12"
# Sync feature dependencies
aws-config = "1.1"
aws-sdk-s3 = "1.15"
aes-gcm = "0.10"
base64 = "0.21"
# PDF processing dependencies (optional)
pdf-extract = { version = "0.9", optional = true }

[features]
default = ["pdf"]
pdf = ["pdf-extract"]

[target.'cfg(unix)'.dependencies]
libc = "0.2"
nix = { version = "0.27", features = ["fs", "signal", "process"] }

[dev-dependencies]
tempfile = "3.8"
criterion = { version = "0.5", features = ["html_reports"] }
warp = "0.3"

# Enable debug symbols
[profile.dev]
debug = true

[profile.release]
debug = true