[package]
name = "lc"
version = "0.1.0"
edition = "2021"
rust-version = "1.88.0"
description = "LLM Client - A fast Rust-based LLM CLI tool with provider management and chat sessions"
authors = ["Rajashekar Chintalapati <rajshekar.ch@gmail.com>"]
license = "MIT"

[[bin]]
name = "lc"
path = "src/main.rs"

[lib]
name = "lc"
path = "src/lib.rs"

[dependencies]
clap = { version = "4.4", features = ["derive", "env"] }
clap_complete = "4.4"
tokio = { version = "1.35", features = ["full"] }
tokio-util = { version = "0.7", features = ["net"] }
reqwest = { version = "0.11", features = ["json", "stream"] }
futures-util = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
dirs = "5.0"
uuid = { version = "1.6", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
rusqlite = { version = "0.30", features = ["bundled", "chrono"] }
rpassword = "7.3"
toml = "0.8"
colored = "2.1"
tabled = "0.15"
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }
rand = "0.8"
atty = "0.2"
tiktoken-rs = "0.5"
glob = "0.3"
lazy_static = "1.4"
regex = "1.10"
crossterm = "0.27"
rmcp = { git = "https://github.com/modelcontextprotocol/rust-sdk.git", rev = "209dbac5", features = ["client", "transport-child-process", "transport-sse-client", "reqwest"] }
scraper = "0.18"
urlencoding = "2.1"
tera = "1.19"
# Performance optimization dependencies
lru = "0.12"
rayon = "1.8"
memmap2 = "0.9"
pdf-extract = { version = "0.9", optional = true }
# Dependencies used in main code (moved from dev-dependencies)
hnsw_rs = "0.3"
dashmap = "5.5"
parking_lot = "0.12"
aws-config = "1.1"
aws-sdk-s3 = "1.15"
aes-gcm = "0.10"
base64 = "0.21"
jsonwebtoken = { version = "9", default-features = false, features = ["use_pem"] }

[dev-dependencies]
hyper = "0.14"
async-stream = "0.3"
simdeez = "2.0.0-dev5"
tempfile = "3.8"
criterion = { version = "0.5", features = ["html_reports"] }
warp = "0.3"
serial_test = "3.0"

[features]
default = ["pdf"]
pdf = ["pdf-extract"]

[target.'cfg(unix)'.dependencies]
libc = "0.2"
nix = { version = "0.27", features = ["fs", "signal", "process"] }

# Enable debug symbols
[profile.dev]
debug = true

[profile.release]
debug = true
